# boru

./: .gitignore  2026-07-12T00-03-28Z__examples-iced-chat-app-rs.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_NOTE.md  CATALOGUE_AUDIT.md  CHANGES_SUMMARY.md  COMPREHENSIVE_SUMMARY.md  CONVERSATION_HISTORY_DIAGNOSIS.md  Cargo.toml  DEPENDENCY_COMPATIBILITY.md  DEPLOY_BORU_TEST.md  DESIGN_SYSTEM.md  DHT_AUDIT.md  FINAL_REVIEW_REPORT.md  FINDINGS.md  INTEGRATION_POINTS.md  IROH_AUDIT.md  MCP_Diagnostics_Implementation_Audit_Prompt.txt  Makefile.toml  PLAN.md  README.md  REVIEW_REPORT.md  REVIEW_REPORT_t_8587cc93.md  SKETCH-multi-room-subscription.md  STEP1_AUDIT.md  SUMMARY.md  TEST_REPORT.md  TEST_RESULTS.md  UI_POLISH_AUDIT_REPORT.md  UX_AUDIT.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_t_1256c805.md  add-test-file.py  add_file.sql  boru-chat-dht-bootstrap.txt  boru-chat-mcp-part2.txt  boru-chat-mcp.txt  boru-follow-up-task-decomposition.md  boru-mcp-task.txt  (+25 more)
.cargo/: config.toml
.github/workflows/: boru-test-deploy.yaml  ci.yaml  docs.yaml  tests.yaml
.hermes/plans/: 2026-07-03_165624-arti-tor-chat-plan.md
.impeccable/critique/: 2026-07-12T00-03-28Z__examples-iced-chat-app-rs.md
app/: build.gradle.kts
docs/: BORU_BRANDING_AUDIT.md  MCP_DIAGNOSTICS.md  MCP_GUI_ACTIONS.md  MCP_GUI_ACTION_SCHEMAS.md  OBSERVABILITY.md  branding-rename-deliverables.md  browser-wasm-evaluation.md  build-release.md  catalogue-limits.md  catalogue_limits.json  compatibility-identifiers.md  concurrency-cleanup-review.md  configuration.md  design-file-recipient-sync-replication.md  design-file-record-deletion-cleanup.md  design-file-record-encrypted-sharing.md  discovery-architecture.md  download_limits.json  empty-state-spec.md  error-state-taxonomy.md  gui-architecture.md  message-storage-design.md  migration-memstore-to-persistent-file-store.md  networking-audit.md  offline-direct-messaging.md  onboarding-and-pairing-design.md  pause-mechanism.md  privacy-model.md  protocol-layers.md  public-discovery-lease-cache.md  public-lobby-topic-identity.md  reliability-implementation-status.md  remote-file-sharing.md  resource-exhaustion-mitigations.md  security-model.md  storage-redesign.md  testing.md  ui-audit.md
docs/design/: download-progress-row.md  transfer-lifecycle-events.md
docs/notification-system/: 01-audit-and-plan.md  implementation-status.md
docs/plans/: 2026-07-08-docs-small-room-latency-spike.md
docs/reports/: 2026-07-08-small-room-latency-report.md
docs/screenshots/: dashboard-mockup.html
examples/: catalogue_browser.rs  chat-gui.rs  chat.rs  dht_harness.rs  doctor.rs  hermes-verify-atomic-write.rs  hermes-verify-ticket-copy-t_d9323c3b.py  lan_test.rs  setup.rs  small_room_bench.rs  test_addr.rs
examples/iced_chat/: TEST_NOTES_DOWNLOAD_PROGRESS.md  TYPOGRAPHY_AUDIT.md  app.rs  connection_details.rs  download_progress_view.rs  file_library.rs  file_library_ops.rs  fonts.rs  gui_test_actions.rs  invitation_qr.rs  link_preview.rs  log_viewer.rs  main.rs  mcp_server.rs  perf_tracker.rs  presentation.rs
examples/iced_chat/fonts/: OFL.txt
examples/iced_chat/notification/: backend.rs  event.rs  focus.rs  mod.rs  render.rs  service.rs
mobile/: build.gradle.kts
noq-proto-patched/: .cargo_vcs_info.json  Cargo.toml
noq-proto-patched/src/connection/: mod.rs
noq-proto-patched/src/crypto/: rustls.rs
patched/iroh-dns/: Cargo.toml  README-fix.md
patched/iroh-dns/src/: dns.rs
patched/mainline/: .cargo_vcs_info.json  Cargo.toml
patched/mainline/src/: rpc.rs
scripts/: boru-test-instance.sh  flamegraph.sh  install.sh  lint.sh  remote-test.sh  splash.py
src/: abuse_controls.rs  api.rs  backfill.rs  blob_transfer.rs  bounded_startup_scheduler.rs  catalogue_client.rs  catalogue_handler.rs  catalogue_limits.rs  catalogue_model.rs  catalogue_protocol.rs  catalogue_rate_limits.rs  chat_callbacks.rs  chat_core.rs  chat_core.rs.bak  chat_history.rs  compression.rs  contact.rs  conversations.rs  data_dir.rs  diagnostics.rs  discovery_backend.rs  discovery_record.rs  discovery_secret.rs  discovery_validation.rs  download.rs  download_initiation.rs  download_limits.rs  download_manager.rs  dynamic_joiner.rs  file_access.rs  file_access_client.rs  file_access_handler.rs  file_access_protocol.rs  file_indexer.rs  friend_request.rs  friends.rs  gossip_debug.rs  image_optimizer.rs  image_store.rs  inbox.rs  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: app.js  index.html  style.css
src-tauri/src/: backend.rs  chat_entry.rs  ipc.rs  lib.rs  main.rs  state.rs
src/chat_core/: atomic_write.rs  friend_ping.rs
src/net/: address_lookup.rs  address_resolution.rs  util.rs
src/proto/: hyparview.rs  plumtree.rs  sim.rs  state.rs  topic.rs  util.rs
src/whisper/: mod.rs  session_manager.rs
tests/: compression_integration.rs  gen_stress_data.rs  generate_test_images.py  hermes_verify_typing.rs  image_optimizer_integration.rs  interop_two_frontends.rs  mailbox.rs  repro_two_iced_instances.rs  room_e2e.rs  sim.rs  stale_bootstrap.rs  stress_test_comprehensive.rs  test_ack_processing.rs  test_blob_size_enforcement.rs  test_branding_rename.rs  test_catalogue_harness.rs  test_catalogue_lifecycle_events.rs  test_catalogue_minimal.rs  test_conversation_integration.rs  test_corrupted_content.rs  test_crash_recovery.rs  test_debug.rs  test_delivery_failure.rs  test_deterministic_discovery_integration.rs  test_deterministic_harness.rs  test_download_initiation_integration.rs  test_download_integration.rs  test_download_queue_order.rs  test_download_recovery.rs  test_file_library_integration.rs  test_fixture.rs  test_friend_request_e2e.rs  test_friend_ticket_persistence.rs  test_full_chat_list_flow.rs  test_hostile_input.rs  test_iced_chat_flow.rs  test_image_cache_persistence.rs  test_image_iced_gui_flow.rs  test_image_receiver_download.rs  test_image_send_download.rs  (+44 more)
tests/download-fixtures/: README.md  duplicate-a.txt  generate.py  imported-document.json  manifest.json  referenced-record.csv  small-message.txt
(+7 files in other folders)
