[package]
name = "boru-chat"
version = "0.101.0"
# ── EDITION ─────────────────────────────────────────────────────────
# edition = "2021" ← correct.  If you see "Rust 2015" in an error message
# from clippy-driver/rustc, you are running the linter directly on a
# source file WITHOUT the --edition flag, which defaults to 2015.
#
#   ✔ cargo clippy          (correct — Cargo passes our edition)
#   ✔ cargo clippy --fix
#   ✔ ./scripts/lint.sh     (wrapper that handles both cargo and standalone)
#   ✗ clippy-driver src/foo.rs    (defaults to Rust 2015!)
#   ✗ rustc src/foo.rs            (defaults to Rust 2015!)
#
# To run clippy on a single file outside cargo:
#   clippy-driver --edition 2021 src/foo.rs
# ──────────────────────────────────────────────────────────────────────
edition = "2021"
readme = "README.md"
description = "gossip messages over broadcast trees"
license = "MIT/Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/dmahony/boru-chat"
resolver = "2"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.91"

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
missing_debug_implementations = "warn"

# We use this --cfg for documenting the cargo features on which an API
# is available.  To preview this locally use: RUSTFLAGS="--cfg
# iroh_docsrs cargo +nightly doc --all-features".  We use our own
# iroh_docsrs instead of the common docsrs to avoid also enabling this
# feature in any dependencies, because some indirect dependencies
# require a feature enabled when using `--cfg docsrs` which we can not
# do.  To enable for a crate set `#![cfg_attr(iroh_docsrs,
# feature(doc_cfg))]` in the crate.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(iroh_docsrs)"] }

[lints.clippy]
unused-async = "warn"

[dependencies]
blake3 = "1.8"
sha2 = "0.10"
aes-gcm = "0.10.3"
getrandom = "0.3"
bytes = { version = "1.7", features = ["serde"] }
data-encoding = "2.6.0"
derive_more = { version = "2.0.1", features = [
    "add",
    "debug",
    "deref",
    "display",
    "from",
    "try_into",
    "into",
] }
hex = "0.4.3"
indexmap = "2.0"
iroh-metrics = { version = "1.0.1", default-features = false }
iroh-base = { version = "1", default-features = false, features = ["key"] }
n0-future = "0.3"
postcard = { version = "1", default-features = false, features = [
    "alloc",
    "use-std",
    "experimental-derive",
] }
rand = { version = "0.10.1", features = ["std_rng"] }
serde = { version = "1.0.164", features = ["derive"] }
rfd = { version = "0.15", optional = true }

# net dependencies (optional)
futures-concurrency = { version = "7.6.1", optional = true }

iroh = { version = "1", default-features = false, optional = true }
iroh-mdns-address-lookup = { version = "0.4", optional = true }
iroh-mainline-address-lookup = { version = "0.4", optional = true }
distributed-topic-tracker = { version = "0.3.5", default-features = false }
ed25519-dalek = "3.0.0-rc.0"
tokio = { version = "1", optional = true, features = ["io-util", "sync", "rt", "macros", "time"] }

tokio-util = { version = "0.7.12", optional = true, features = ["codec"] }
tracing = "0.1"
irpc = { version = "0.17.0", optional = true, default-features = false, features = [
    "derive",
    "stream",
    "spans",
] }
n0-error = { version = "1", features = ["anyhow"] }
serde-byte-array = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
iroh-blobs = { version = "0.103", default-features = false, optional = true }

# test-utils dependencies (optional)
humantime-serde = { version = "1.1.1", optional = true }

# simulator dependencies (optional)
clap = { version = "4", features = ["derive"], optional = true }
toml = { version = "1.1.2", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
serde_json = { version = "1", optional = true }
rayon = { version = "1.10.0", optional = true }
comfy-table = { version = "7.1.4", optional = true }
ratatui = { version = "0.28.1", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.28.1", optional = true }
iced = { version = "0.14", default-features = false, features = ["tokio", "x11", "wayland", "tiny-skia", "image", "lazy"], optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }


[dev-dependencies]
tokio = { version = "1", features = [
    "io-util",
    "sync",
    "rt",
    "macros",
    "net",
    "fs",
] }
clap = { version = "4", features = ["derive"] }
humantime-serde = { version = "1.1.1" }
iroh = { version = "1", default-features = false, features = [
    "metrics",
    "test-utils",
    "tls-ring"
] }
iroh-blobs = { version = "0.103", default-features = false }
iroh-mdns-address-lookup = "0.4"
testresult = "0.4.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
n0-tracing-test = "0.3"
tempfile = "3"
url = "2.4.0"
rand = { version = "0.10", features = ["chacha"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
[features]
default = ["net", "metrics"]
net = [
    "dep:irpc",
    "dep:iroh",
    "dep:iroh-blobs",
    "dep:iroh-mdns-address-lookup",
    "dep:iroh-mainline-address-lookup",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures-concurrency",
    "dep:serde_json",
]
test-utils = ["rand/chacha", "dep:humantime-serde"]
simulator = [
    "test-utils",
    "dep:tracing-subscriber",
    "dep:toml",
    "dep:clap",
    "dep:serde_json",
    "dep:rayon",
    "dep:comfy-table",
]
metrics = ["iroh-metrics/metrics"]
examples = ["net", "dep:ratatui", "dep:crossterm"]
gui = ["net", "dep:iced", "dep:tokio", "dep:rfd", "dep:tracing-subscriber"]


[[test]]
name = "sim"
path = "tests/sim.rs"
required-features = ["test-utils"]

[[test]]
name = "room_e2e"
path = "tests/room_e2e.rs"
required-features = ["net", "test-utils"]

[[bin]]
name = "sim"
required-features = ["simulator"]

[[example]]
name = "chat"
required-features = ["examples"]

[[example]]
name = "setup"
required-features = ["examples"]

[[example]]
name = "iced_chat"
required-features = ["gui"]

[[example]]
name = "doctor"
required-features = ["net"]

[[test]]
name = "three_peer_mesh"
path = "tests/test_three_peer_mesh.rs"
required-features = ["net", "test-utils"]

[[test]]
name = "test_blob_size_enforcement"
path = "tests/test_blob_size_enforcement.rs"
required-features = ["net"]

[[test]]
name = "stale_bootstrap"
path = "tests/stale_bootstrap.rs"
required-features = ["net", "test-utils"]

[[test]]
name = "test_message_lifecycle"
path = "tests/test_message_lifecycle.rs"
required-features = ["net", "test-utils"]

[[test]]
name = "image_optimizer_integration"
path = "tests/image_optimizer_integration.rs"
required-features = ["gui"]

[[test]]
name = "performance_baseline"
path = "tests/test_performance_baseline.rs"
required-features = ["net", "test-utils"]

[[test]]
name = "stress_test_comprehensive"
path = "tests/stress_test_comprehensive.rs"
required-features = ["net", "test-utils"]

[[test]]
name = "gen_stress_data"
path = "tests/gen_stress_data.rs"
required-features = ["net", "test-utils"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]

[profile.bench]
debug = true

[profile.release]
debug = true

# ── Windows 11 DNS fix ─────────────────────────────────────────────────
# iroh-dns-1.0.0 uses hickory-resolver which sends plain UDP DNS queries.
# Windows 11 configures DNS over HTTPS (DoH) by default, silently dropping
# UDP queries.  The patched version adds Cloudflare/Google DoH nameservers
# as fallback resolvers and increases the DNS timeout from 3s to 5s.
# See patched/iroh-dns/src/dns.rs for the actual changes.
#
# ── Mainline v7.0.0 Windows compatibility ──────────────────────────────
# UdpSocket::set_read_timeout causes recv_from to return TimedOut on
# Windows (WSAETIMEDOUT / 10060) when idle.  Upstream only handles
# WouldBlock silently, so Windows logs spurious "IO error" warnings every
# ~50ms.  See patched/mainline/src/rpc/socket.rs for the fix.
[patch.crates-io]
iroh-dns = { path = "patched/iroh-dns" }
mainline = { path = "patched/mainline" }


[[test]]
name = "test_serde_format"
path = "tests/test_serde_format.rs"
required-features = ["net"]
